tests/PhiCore/compile_failure/src/algorithm/string_length_unsafe/count_nullptr.fail.cpp
#include <phi/algorithm/string_length_unsafe.hpp>

int main()
{
    (void)phi::string_length_unsafe(nullptr, 0u);
}
